fix message spacing

--- a/styles/src/_content.scss
+++ b/styles/src/_content.scss
@@ -34,17 +34,17 @@
     overflow-x: hidden;
 }
 
-.page .messages div:last-of-type.message {
+.page .messages div:last-of-type .message {
     margin-bottom: 14px;
 }
 
 .page .messages .message-header {
     position: relative;
-    margin-top: 20px;
+    margin-top: 16px;
     animation: fadein 500ms;
 }
 
-.page .messages .message-header .profile{
+.page .messages .message-header .profile {
     width: 40px;
     height: 40px;
     margin-left: 17px;
@@ -65,14 +65,14 @@
     font-style: italic;
 }
 
-.page .messages .message .slack-user{
+.page .messages .message .slack-user {
     font-weight: 600;
 }
 .page .messages .message .slack-user:before {
     content:'@';
 }
 
-.page .messages .message code{
+.page .messages .message code {
     white-space: normal;
     color: red;
     font-size: 12px;
@@ -81,7 +81,7 @@
     padding: 0px 4px;
 }
 
-.page .messages .message codeBlock{
+.page .messages .message codeBlock {
     line-height: 18px;
     font-size: 12px;
     background-color: #f7f7f9;
@@ -90,7 +90,7 @@
     display: block;
 }
 
-.page .messages .message .channel_event .slack-user{
+.page .messages .message .channel_event .slack-user {
     display: none;
 }
 
